test/files/neg/bug284.check
bug284.scala:2: warning: Detected apparent refinement of Unit; are you missing an '=' sign?
    def f1(a: T): Unit { }
                       ^
bug284.scala:5: error: Unmatched closing brace '}' ignored here
  }
  ^
one warning found
one error found
